# portfolio-backend-service

./: .env.dev  Dockerfile  README.md  conftest.py  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0002_delete_stackicon.py  0003_stackicon.py  0004_delete_experience.py  0005_experience_alter_stackicon_icon.py  0006_alter_experience_stack_alter_stackicon_icon.py
api/tests/: test_views.py
conf/: settings.py  test_settings.py  urls.py
